@@ -28,7 +28,7 @@
 #ifdef HAVE_TIME_H
 #include <time.h>
 #endif
-#ifdef WIN32
+#ifdef HAVE_WINDOWS_H
 #include <windows.h>
 #endif
 
@@ -69,7 +69,7 @@ int RTIME_Initialise(int *argc, char *argv[])
 	return TRUE;
 }
 
-#if defined(WIN32) || (defined(HAVE_TIME) && defined(HAVE_LOCALTIME))
+#if defined(HAVE_WINDOWS_H) || (defined(HAVE_TIME) && defined(HAVE_LOCALTIME))
 
 static int hex2bcd(int h)
 {
@@ -78,7 +78,7 @@ static int hex2bcd(int h)
 
 static int gettime(int p)
 {
-#ifdef WIN32
+#ifdef HAVE_WINDOWS_H
 	SYSTEMTIME st;
 	GetLocalTime(&st);
 	switch (p) {
@@ -97,7 +97,7 @@ static int gettime(int p)
 	case 6:
 		return hex2bcd(((st.wDayOfWeek + 2) % 7) + 1);
 	}
-#else /* WIN32 */
+#else /* HAVE_WINDOWS_H */
 	time_t tt;
 	struct tm *lt;
 
@@ -120,13 +120,13 @@ static int gettime(int p)
 	case 6:
 		return hex2bcd(((lt->tm_wday + 2) % 7) + 1);
 	}
-#endif /* WIN32 */
+#endif /* HAVE_WINDOWS_H */
 	return 0;
 }
 
 #define HAVE_GETTIME
 
-#endif /* defined(WIN32) || (defined(HAVE_TIME) && defined(HAVE_LOCALTIME)) */
+#endif /* defined(HAVE_WINDOWS_H) || (defined(HAVE_TIME) && defined(HAVE_LOCALTIME)) */
 
 UBYTE RTIME_GetByte(void)
 {
